# bls12-381-sign

./: Cargo.toml
benches/: signature_bench.rs
src/: error.rs  ffi.rs  hash.rs  keys.rs  lib.rs  signature.rs  tests.rs
src/keys/: apk.rs  public.rs  secret.rs
src/tests/: signature_test.rs
