[package]
name = "bls12_381-sign"
version = "0.1.0"
authors = ["Jules de Smit <julesdesmit@gmail.com>"]
edition = "2018"

[dependencies]
bls12_381 = { version = "0.6", default-features = false, features = ["groups"] }
group = { version = "0.11", default-features = false }
rand = {version = "0.7", default-features = false}
rand_core = {version = "0.6", default-features = false}
blake2 = {version = "0.9", default-features = false, optional = true}
thiserror = {version = "1.0", default-features = false}
libc = "0.2"

[lib]
crate-type = ["rlib", "staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
incremental = false
codegen-units = 1

[features]
default = ["std", "rand_core/getrandom"]
std = [
    "bls12_381/default",
    "group/default",
    "blake2",
]
